8066670: PrintSharedArchiveAndExit does not exit the VM when the archive is invalid

In FileMapInfo::fail_continue do not set UseSharedSpaces = false

Reviewed-by: dholmes, ccheung